Stop pages from jumping left/right when navigating between pages.

--- a/src/css/global-site.css
+++ b/src/css/global-site.css
@@ -1,3 +1,7 @@
+html {
+  overflow-y: scroll;
+}
+
 aside.theme-doc-sidebar-container {
   background-color: #fbfbfb;
 }
